--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </h1>
 
     <div class="player">
-        <h2> Choose Your Move </h2>
+        <div> Choose Your Move </div>
 
         <div>
             Lives Remaining
@@ -56,6 +56,12 @@
             </div>
         </div>
 
+    </div>
+
+    <div class="end_game">
+        <p id="game_result"> </p>
+
+        <div id="retry"> </div>
     </div>
 
 
