--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     </div>
 
     <div class="results">
-        <p id="result"></p>
+        <p id="result">
+            Choose your move by clicking one of the images above
+        </p>
     </div>
 
     <div class="computer">
@@ -59,9 +61,7 @@
     </div>
 
     <div class="end_game">
-        <p id="game_result"> </p>
 
-        <div id="retry"> </div>
     </div>
 
 
